# compiler

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: grammar.md
src/: main.cpp
src/core/: ident.hpp  loc.hpp  offset.hpp  source.hpp  span.hpp
src/driver/: cli.hpp  driver.hpp  reader.hpp
src/frontend/: frontend.hpp
src/frontend/analyzer/: name_resolver.hpp  type_resolver.hpp
src/frontend/lexer/: chars.hpp  error.hpp  error_dump.hpp  lexer.cpp  lexer.hpp  scanner.hpp  spelling.hpp
src/frontend/parser/: cursor.hpp  error.hpp  parse_decl.cpp  parse_expr.cpp  parse_stmt.cpp  parse_type.cpp  parser.hpp
src/frontend/semantics/scope/: scope.hpp  scope_id.hpp  scope_pool.hpp
src/frontend/semantics/symbol/: symbol.hpp
src/frontend/semantics/type/: type.hpp  type_id.hpp  type_interner.hpp
src/frontend/syntax/ast/: ast_dump.cpp  ast_dump.hpp  block.hpp  decl.hpp  expr.hpp  module.hpp  name.hpp  node_id.hpp  stmt.hpp  type.hpp
src/frontend/syntax/literal/: literal.hpp  literal_dump.hpp
src/frontend/syntax/op/: op.hpp  op_dump.hpp
src/frontend/syntax/token/: token.hpp  token_dump.hpp  token_kind.hpp
src/support/: debug.hpp  id.hpp  interner.hpp  pool.hpp  primitives.hpp  variant.hpp
tests/: CMakeLists.txt  test.lang  test1.lang  test2.lang  test3.lang  test4.lang  test5.lang  test6.lang
